# 6keys

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-PAPER  MANIFEST.in  README.md  docker-compose.yml  environment.yml  pyproject.toml  renumber_and_link_qa.py  requirements.txt  setup.cfg  setup.py
.obsidian/: workspace.json
docs/: README.md  developers.md  experiments.md  faq.md  features.md  installation.md  project-structure.md  quickstart.md  theory.md  visualization.md  六鑰臨界問與答.md
docs/api/: README.md
docs/assets/diagrams/: .gitkeep  ACI.mmd  FELC.mmd  PWC.mmd  flow_summary_A4.mmd  六鑰流動圖.mmd
docs/assets/images/: .gitkeep
docs/en/: README.md  Six-Keys_Criticality_QA.md  experiments.md  faq.md  installation.md  quickstart.md  theory.md  visualization.md
docs/en/paper/: .gitkeep  00_Abstract.md  01_Introduction_Problem_Landscape_and_Contributions.md  02-1_Six-Key_Criticality_Architecture_Overview.md  02-2_Unified_Framework_Six-Key_Phase_Diagram_and_CTM.md  03-0_FELC_Definition_and_Formula.md  03-1_FELC_Free-Energy_Limit_Cycle_Part_1.md  03-2_FELC_Free-Energy_Limit_Cycle_Part_2.md  04-0_RFI_Definition_and_Formula.md  04-1_RFI_Ricci_Curvature_Critical_Flow_Part_1.md  04-2_RFI_Ricci_Curvature_Critical_Flow_Part_2.md  05-0_ECGP_Definition_and_Formula.md  05-2_ECGP_Effective_Causal_Gradient_Percolation_Part_2.md  06-0_PWC_Definition_and_Formula.md  06-1_PWC_Phase_Topological_Circulation_Part_1.md  06-2_PWC_Phase_Topological_Circulation_Part_2.md  07-0_ACI_Definition_and_Formula.md  07-2_ACI_Neuron_Astrocyte_Coupling_Criticality_Part_2.md  08-0_TEB_Definition_and_Formula.md  08-2_TEB_Information_Energy_Efficiency_Part_2.md  09-1_Cross_Validation_and_Integrated_Experimental_Design.md  09-2_Open_Data_Reanalysis.md  10-1_Key_Three_Keys_and_Neural_Manifold_Dynamics.md  10-4_Flow_State_Critical_Window.md  12_Conclusion_Critical_Gateway_and_Open_Science_Path.md  B_Code_Index_and_Installation_Guide.md  C-1_Symbol_Table_and_Abbreviations.md  D_Experimental_Details_Reference_Blueprint.md  E_Transparency_and_Open_Science_Statement.md  F_Content_Licensing_Terms.md  G_Six_Keys_and_Goldstone_Effective_Field_Theory(Part1).md  README.md
docs/gitbook/: .gitignore  .markdownlint.json  DEPLOYMENT.md  README.md  SUMMARY.md  book.json  citation.md  package.json  quick-navigation.md
docs/gitbook/core-concepts/: README.md  q1-1.md  q1-2.md  q1-3.md
docs/gitbook/diagrams/: ECGP.mmd  RFI.mmd  TEB.mmd  flow_summary_A4_horizontal_colored.mmd  flow_summary_circular_colored.mmd  g1.4.mmd  六鑰結構圖.mmd  六鑰與臨界場論結構圖.mmd  對稱群破缺.mmd  核心三鑰.mmd
docs/gitbook/paper-en/: 00_Abstract.md  01_Introduction_Problem_Landscape_and_Contributions.md  02-1_Six-Key_Criticality_Architecture_Overview.md  02-2_Unified_Framework_Six-Key_Phase_Diagram_and_CTM.md  03-0_FELC_Definition_and_Formula.md  03-2_FELC_Free-Energy_Limit_Cycle_Part_2.md  04-0_RFI_Definition_and_Formula.md  04-2_RFI_Ricci_Curvature_Critical_Flow_Part_2.md  05-0_ECGP_Definition_and_Formula.md  05-1_ECGP_Effective_Causal_Gradient_Percolation_Part_1.md  05-2_ECGP_Effective_Causal_Gradient_Percolation_Part_2.md  06-0_PWC_Definition_and_Formula.md  06-2_PWC_Phase_Topological_Circulation_Part_2.md  07-0_ACI_Definition_and_Formula.md  07-1_ACI_Neuron_Astrocyte_Coupling_Criticality_Part_1.md  07-2_ACI_Neuron_Astrocyte_Coupling_Criticality_Part_2.md  08-0_TEB_Definition_and_Formula.md  08-1_TEB_Information_Energy_Efficiency_Part_1.md  08-2_TEB_Information_Energy_Efficiency_Part_2.md  09-1_Cross_Validation_and_Integrated_Experimental_Design.md  09-2_Open_Data_Reanalysis.md  10-1_Key_Three_Keys_and_Neural_Manifold_Dynamics.md  10-2_Bayesian_Update_and_Six_Key_Criticality_Dynamic_Coupling.md  10-3_Gray_Zone_Shallow_Consciousness_and_Automatic_Response_Critical_Window.md  11_Discussion_and_Prospects.md  12_Conclusion_Critical_Gateway_and_Open_Science_Path.md  A_Mathematical_Derivations_Detailed.md  C-2_Mainstream_Theory_Six_Key_Symbol_Correspondence_Table.md  C-3_Literature_Citations.md  C-4_Six_Key_Data_Format_JSON.md  F_Content_Licensing_Terms.md  G_Six_Keys_and_Goldstone_Effective_Field_Theory(Part1).md  G_Six_Keys_and_Goldstone_Effective_Field_Theory(Part2).md
docs/gitbook/paper-zh/: 00_摘要.md  01_緒論：問題景觀與貢獻.md  02-1_六鑰臨界架構總攬.md  02-2_統一框架：六鑰相圖與CTM.md  03-0_FELC - ζ₁ 定義與公式.md  03-2_FELC 自由能極限環(下).md  04-0_RFI - ζ₃ 定義與公式.md  04-1_RFI Ricci 曲率臨界流(上).md  04-2_RFI Ricci 曲率臨界流(下).md  05-0_ECGP - ζ₄ 定義與公式.md  05-1_ECGP 因果滲流 σ→1(上).md  05-2_ECGP 因果滲流 σ→1(下).md  06-0_PWC - ζ₅ 定義與公式.md  06-2_PWC 相位拓撲環流 β₁(下).md  07-0_ACI - ζ₆ 定義與公式.md  07-2_ACI 神經-星膠耦合臨界 g_eff(下).md  08-0_TEB - ζ₂ 定義與公式.md  08-1_TEB 資訊–能耗效率 η(上).md  08-2_TEB 資訊–能耗效率 η(下).md  09-1_交叉驗證與整合實驗設計.md  09-2_公開資料重分析.md  10-1_關鍵三鑰與神經流形動力學.md  10-2_貝葉斯更新與六鑰臨界的動力耦合.md  10-3_淺意識與自動反應的臨界窗格.md  10-4_Flow State：心流態的臨界窗格.md  11_討論與前瞻.md  12_結論：臨界之門與開放科學之路.md  A-0_數學推導詳解.md  C-2_主流理論與六鑰符號對照表.md  Complete_Six_Key_Framework.md  E_透明度與開放科學聲明.md  F_內容授權條款.md  G_六鑰及Goldstone有效場論(上).md  G_六鑰及Goldstone有效場論(下).md  fig1_pubmed_heatmap.py
docs/gitbook/qa-en/: Six-Keys_Criticality_QA.md
docs/gitbook/qa-zh/: Six-Keys_Criticality_QA.md
docs/zh/: Six-Keys_Criticality_QA.md.backup2  Six-Keys_Criticality_QA.md.backup3  Six-Keys_Criticality_QA.md.backup4  Six-Keys_Criticality_QA.md_backup_20250706_143659  Six-Keys_Criticality_QA_backup_20250706_142952.md  Six-Keys_Criticality_QA_backup_20250706_143110.md  faq.md  installation.md  quickstart.md  theory.md
docs/zh/paper/: .gitkeep  00_摘要.md  01_緒論：問題景觀與貢獻.md  02-1_六鑰臨界架構總攬.md  02-2_統一框架：六鑰相圖與CTM.md  (+28 more)
examples/: basic_usage.py  demo_visualization.py
publications/: .gitkeep
scripts/: analyze.py
sixkeys/: __init__.py
sixkeys/analysis/: __init__.py  analyzer.py  cross_validation.py  public_data.py
sixkeys/core/: __init__.py  aci.py  ecgp.py  felc.py  pwc.py  rfi.py  teb.py
sixkeys/demos/: README.md  __init__.py  cross_validation.py  public_data_analysis.py  radar_chart.py
sixkeys/utils/: __init__.py  data_io.py  metrics.py  preprocessing.py  visualization.py
tests/test_core/: test_all_indicators.py  test_felc.py
(+2 files in other folders)
